--- a/style.css
+++ b/style.css
@@ -349,6 +349,40 @@ h1, h2, h3, h4, h5, h6 {
 	height: 1px;
 }
 
+@-webkit-keyframes fadeInRight {
+	0% {
+	  opacity: 0;
+	  left: 20%;
+	}
+	100% {
+	  opacity: 1;
+	  left: 0;
+	}
+  }
+  
+  @-moz-keyframes fadeInRight {
+	0% {
+	  opacity: 0;
+	  left: 20%;
+	}
+	100% {
+	  opacity: 1;
+	  left: 0;
+	}
+  }
+  
+  @-ms-keyframes fadeInRight {
+	0% {
+	  opacity: 0;
+	  left: 20%;
+	}
+	100% {
+	  opacity: 1;
+	  left: 0;
+	}
+  }
+  
+
 
 
 /* 05 ABOUT SETTINGS
@@ -560,13 +594,15 @@ footer p {
 
 /* instagram */
 
-.eapps-instagram-feed-posts-view{    
-    width: 75%!important;
+.instagram_gallery{
+	width: 82%!important;
 	margin: 0 auto!important;
 }
 
-.eapps-instagram-feed-posts-grid-load-more{
-	background-color:grey!important;
+.instagram_username{
+	font-size: 1.2em;
+    font-size: 20px;
+    color: black;
+    margin-top: 40px;
+    margin-bottom: 10px;
 }
-
-.eapps-link a{display: none!important;}
