--- a/style.css
+++ b/style.css
@@ -606,3 +606,11 @@ footer p {
     margin-top: 40px;
     margin-bottom: 10px;
 }
+
+/* Menu */
+.menu-carta-btn{
+	background: gray;
+    border-radius: 30px;
+    color: white;
+    font-size: 18px;
+    padding: 4px 43px;}
