--- a/style/style.css
+++ b/style/style.css
@@ -1,24 +1,8 @@
-/*
-	CSS STRUCTURE
-	-----------------
-	01. Import Font Family
-	02. CSS Reset
-	03. General Settings
-	04. Header Settings
-	05. About Settings
-	06. Portfolio Settings
-	07. Contact Settings
-	08. Footer Settings
-	09. Responsive Settings
-		
-*/
 
 /* 01 IMPORT FONT FAMILIES
 --------------------------------------------------------------- */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
-/* 02 CSS RESET
---------------------------------------------------------------- */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -39,6 +23,7 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
@@ -63,8 +48,8 @@ table {
 	border-spacing: 0;
 }
 
-/* 03 GENERAL SETTINGS
---------------------------------------------------------------- */
+
+/* 03 GENERAL SETTINGS  */
 
 * {
 	-webkit-box-sizing: border-box;
@@ -111,7 +96,6 @@ h1, h2, h3, h4, h5, h6 {
 	text-transform: uppercase;
 }
 
-/* Section Titles */
 .section_title {
 	margin: 0 0 15px 0;
 	color: black;
@@ -126,7 +110,6 @@ h1, h2, h3, h4, h5, h6 {
 	text-transform: none;
 }
 
-/* Containers */
 .container_small, .container_big {
 	width: 100%;
 	margin: 0 auto;
@@ -135,8 +118,7 @@ h1, h2, h3, h4, h5, h6 {
 .container_small {max-width: 900px;}
 .container_big {max-width: 1050px;}
 
-/* 04 HEADER SETTINGS
---------------------------------------------------------------- */
+
 .p0{
 	padding: 0!important;
 }
@@ -155,7 +137,6 @@ h1, h2, h3, h4, h5, h6 {
 	height: 100%;
 }
 
-/* Header Titles */
 .header_title {
 	color: #fff;
 	font-size: 30px;
@@ -177,193 +158,12 @@ h1, h2, h3, h4, h5, h6 {
 	color: #fff;
 }
 
-/* Vertical centering */
 .parent {display: table;}
 
 .child {
     display: table-cell;
     vertical-align: middle;
 }
-
-/* Menu */
-.burger {
-	position: fixed;
-	top: 50px;
-	left: 50px;
-	height: 40px;
-	width: 40px;
-	cursor: pointer;
-	z-index: 100;
-	-webkit-transition: opacity .25s ease;
-	-moz-transition: opacity .25s ease;
-	-o-transition: opacity .25s ease;
-	-ms-transition: opacity .25s ease;
-	transition: opacity .25s ease;	
-}
-
-.burger.active .top {
-	-webkit-transform: translateY(10px) translateX(0) rotate(45deg);
-	-ms-transform: translateY(10px) translateX(0) rotate(45deg);
-	transform: translateY(10px) translateX(0) rotate(45deg);
-}
-.burger.active .middle {
-  opacity: 0;
-}
-.burger.active .bottom {
-	-webkit-transform: translateY(-10px) translateX(0) rotate(-45deg);
-	-ms-transform: translateY(-10px) translateX(0) rotate(-45deg);
-	transform: translateY(-10px) translateX(0) rotate(-45deg);
-}
-.burger span {
-	background: white;
-	border: none;
-	height: 2px;
-	width: 100%;
-	position: absolute;
-	top: 10px;
-	left: 0;
-	-webkit-transition: all .35s ease;
-	-moz-transition: all .35s ease;
-	-o-transition: all .35s ease;
-	-ms-transition: all .35s ease;
-	transition: all .35s ease;	
-	cursor: pointer;
-}
-
-.burger span:nth-of-type(2) { top: 20px; }
-.burger span:nth-of-type(3) { top: 30px; }
-
-.navigation {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	opacity: 1;
-	visibility: hidden;
-	-webkit-transition: opacity .35s, visibility .35s, width .35s;
-	-moz-transition: opacity .35s, visibility .35s, width .35s;
-	-o-transition: opacity .35s, visibility .35s, width .35s;
-	-ms-transition: opacity .35s, visibility .35s, width .35s;
-	transition: opacity .35s, visibility .35s, width .35s;		  
-	z-index: 50;
-}
-.navigation:before {
-	content: '';
-	background: #111;
-	left: -105%;
-	top: 0;
-	width: 100%;
-	height: 100vh;
-	position: absolute;
-	-webkit-transition: left .35s ease;
-	-moz-transition: left .35s ease;
-	-o-transition: left .35s ease;
-	-ms-transition: left .35s ease;
-	transition: left .35s ease;	
-}
-
-.navigation.open, .navigation.close {
-	opacity: 1;
-	visibility: visible;
-	height: 100%;
-}
-.navigation.open:before, .navigation.close:before { left: 0; }
-
-.navigation.open li {
-	-webkit-animation: fadeInRight .5s ease forwards;
-	-moz-animation: fadeInRight .5s ease forwards;
-	animation: fadeInRight .5s ease forwards;
-	-webkit-animation-delay: .35s;
-	-moz-animation-delay: .35s;
-	animation-delay: .35s;
-}
-.navigation.open li:nth-of-type(2) {
-	-webkit-animation-delay: .45s;
-	-moz-animation-delay: .45s;
-	animation-delay: .45s;
-}
-.navigation.open li:nth-of-type(3) {
-	-webkit-animation-delay: .55s;
-	-moz-animation-delay: .55s;
-	animation-delay: .55s;
-}
-
-.navigation nav { position: relative; }
-
-.navigation ul {
-	list-style: none;
-	display: inline-block;
-	position: relative;
-	margin: 10vh 0 0 0;
-	padding: 0;
-	height: 80vh;
-}
-
-.navigation ul li {
-	display: block;
-	position: relative;
-	opacity: 0;
-	height: 15vh;
-	line-height: 15vh;
-}
-
-.navigation ul li  a {
-	font-family: 'Montserrat', sans-serif;
-	text-transform: uppercase;
-	font-size: 24px;
-	letter-spacing: 6px;
-}
-
-.navigation ul li  a:hover { color: #fff; }
-
-.simple_line {
-	background: #252525;
-	position: absolute;
-	bottom: 0;
-	left: calc(50% - 25px);
-	width: 50px;
-	height: 1px;
-}
-
-@-webkit-keyframes fadeInRight {
-	0% {
-	  opacity: 0;
-	  left: 20%;
-	}
-	100% {
-	  opacity: 1;
-	  left: 0;
-	}
-  }
-  
-  @-moz-keyframes fadeInRight {
-	0% {
-	  opacity: 0;
-	  left: 20%;
-	}
-	100% {
-	  opacity: 1;
-	  left: 0;
-	}
-  }
-  
-  @-ms-keyframes fadeInRight {
-	0% {
-	  opacity: 0;
-	  left: 20%;
-	}
-	100% {
-	  opacity: 1;
-	  left: 0;
-	}
-  }
-  
-
-
-
-/* 05 ABOUT SETTINGS
---------------------------------------------------------------- */
 
 #about {
 	background: #f5f5f5;
@@ -391,10 +191,6 @@ h1, h2, h3, h4, h5, h6 {
 	background: #a67d4a;
 	color: #fff;
 }
-
-
-/* 07 CONTACT SETTINGS
---------------------------------------------------------------- */
 
 #contact {
 	background: #fff;
@@ -469,9 +265,6 @@ h1, h2, h3, h4, h5, h6 {
 	color: #fff;
 }
 
-/* 08 FOOTER SETTINGS
---------------------------------------------------------------- */
-
 footer {
 	background: #f5f5f5;
 }
@@ -500,11 +293,6 @@ footer p {
 	text-transform: uppercase;
 }
 
-
-/* 09 RESPONSIVE SETTINGS
---------------------------------------------------------------- */
-
-/* Width */
 @media (max-width: 768px) {
 	.burger {
 		top: 25px;
@@ -569,22 +357,6 @@ footer p {
 	.left { padding: 0 0 15px 0;}
 }
 
-/* instagram */
-
-.instagram_gallery{
-	width: 82%!important;
-	margin: 0 auto!important;
-}
-
-.instagram_username{
-	font-size: 1.2em;
-    font-size: 20px;
-    color: black;
-    margin-top: 40px;
-    margin-bottom: 10px;
-}
-
-/* Menu */
 .menu-carta-btn{
 	background: gray;
     border-radius: 30px;
