--- a/style/style.css
+++ b/style/style.css
@@ -362,4 +362,5 @@ footer p {
     border-radius: 30px;
     color: white;
     font-size: 18px;
-    padding: 4px 43px;}
+    padding: 4px 43px;
+}
