--- a/style/style.css
+++ b/style/style.css
@@ -321,6 +321,10 @@ footer p {
 	.featherlight-iframe .featherlight-content { width: 65% !important; }
 	
 	.container_footer { padding: 60px 25px; }
+
+	#welcome{
+		height: 100vh;
+	}
 }
 
 @media (max-width: 480px) {
@@ -368,4 +372,18 @@ footer p {
 	font-size: 40px;
 	position: relative;
 	top: 50%;
+}
+
+.logo{
+	width: 8%;
+	position: absolute;
+	left: 80%;
+	top: 77%;
+}
+@media (max-width: 991px) {
+.logo{
+	width: 26%;
+	position: absolute;
+	top: 85%;
+	left: 66%;}
 }
