--- a/style/style.css
+++ b/style/style.css
@@ -127,7 +127,7 @@ h1, h2, h3, h4, h5, h6 {
 /*background: url('../img/restaurante.jpg') no-repeat center; */
 	background-size: cover;
 	width: 100%;
-	height: 60vh;
+	height: 70vh;
 	position: relative;
 }
 
@@ -391,4 +391,8 @@ footer p {
 }
 .map-section{
 	margin-top:40px;
+}
+.container{
+	max-width: 100%;
+	width: 100%;
 }
