--- a/style/style.css
+++ b/style/style.css
@@ -127,7 +127,7 @@ h1, h2, h3, h4, h5, h6 {
 /*background: url('../img/restaurante.jpg') no-repeat center; */
 	background-size: cover;
 	width: 100%;
-	height: 70vh;
+	height: 75vh;
 	position: relative;
 }
 
@@ -392,7 +392,10 @@ footer p {
 .map-section{
 	margin-top:40px;
 }
-.container{
+.container-full{
 	max-width: 100%;
 	width: 100%;
+}
+.h-fix{
+	margin-bottom:-4px!important;
 }
