--- a/style/style.css
+++ b/style/style.css
@@ -123,8 +123,8 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 0!important;
 }
 #welcome {
-	background: gray;
-/*background: url('../img/restaurante.jpg') no-repeat center; */
+	background:lightgrey;
+	/*background: url('../img/restaurante.jpg') no-repeat center; */
 	background-size: cover;
 	width: 100%;
 	height: 75vh;
@@ -138,7 +138,6 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .header_title {
-	color: #fff;
 	font-size: 30px;
 	letter-spacing: 6px;
 	margin: 0 0 20px 0;
