--- a/style/swiper.css
+++ b/style/swiper.css
@@ -1,6 +1,7 @@
 .img-swipper-size{
   width: 100%;
-  height: 70vh;
+  height: 72vh;
+  object-fit: fill;
 }
 .effect-brig{
   filter: brightness(80%);
